# toddler-lights

./: README.md  app.js  fix_html.py  index.html  lights.html  lights.js  package-lock.json  package.json  tailwind.config.cjs
js/: tauri-bridge.js
public/config/: app-config.json
scripts/: build-release-artifacts.ps1  build.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/bridges/: mod.rs
